  * util-core: Event.filter only 1 call to filter predicate

Bug Fixes:
  * util-jvm: Fix logging in Jvm.foreachGc
  * util-core: document StorageUnit can overflow
  * util-core: check Future.proxyTo and Promise.become preconditions

API Changes:
  * util-core: remove Leaky and FutureBenchmark

Documentation:
  * util, ostrich, finagle, twitter-server: Remove all trailing spaces

  API Changes:
  * util-core: Deprecate `RingBuffer` in favor of Guava's `com.google.common.collect.EvictingQueue`.

6.21.2  2014-09-08
  * util-cache: Adds a Guava-backed asynchronous cache
  * util-core: Fixed FuturePool for NLRC
  * util-core: Improve java friendliness of futures
  * util-core: Make register/close on Event() work atomically
  * util-core: Reimplement Buf.Utf8 encoder/extractor using io.Charsets
  * util-core: storage parse() should be able to handle Long
  * util-logging: make Logger immutable & break cyclic dependency on Level
  * util: Upgrade to scala_2.10

6.20.0  2014-08-22

  * util: Enables cross-publishing for 2.11
  * util-app: Log severely if a flag is read at the wrong time
  * util-core: Changes transform to fail Futures if you return inside the passed closure
  * util-core: Copy bytes from Reader to Writer and OutputStream
  * util-core: Fix RichU64String to throw for negative input Problem
  * util-core: Optimizations in Buf
  * util-core: Remove some unnecessary implicit conversions
  * util-doc: Fix updatedocs.bash to update new util docs

6.19.0  2014-08-05

  * util: smattering of minor cleanups in util and finagle
  * util-core: Reader and getContent symmetry

6.18.4  2014-07-31

  * util-core: Remove confusing NOOP 0.until(5) in Future.collect().
  * util-app: Fix a bug in global flag parsing

6.18.2  2014-07-23

  * util-core: Fixes a broken sbt test
  * util-core: Log exceptions caught by ChannelStatsHandler
  * util-core: Satisfy promise on fatal exception in FuturePool task
  * util-core: small perf improvements to Future.collect, Throw, Flag